--- a/glen/glen.vcxproj.filters
+++ b/glen/glen.vcxproj.filters
@@ -602,9 +602,6 @@
     <ClInclude Include="inc\glen\System\Scene.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="inc\glen\Graphics\stb_image\stb_image.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="inc\glen\Graphics\RenderTexture.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -627,6 +624,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="inc\glen\Graphics\Sprite.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics\stb_image\stb_image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
