--- a/glen/glen.vcxproj
+++ b/glen/glen.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Graphics\Image.cpp" />
+    <ClCompile Include="src\Graphics\MeshRenderer.cpp" />
     <ClCompile Include="src\Graphics\ShaderAsset.cpp" />
     <ClCompile Include="src\Graphics\Sprite.cpp" />
     <ClCompile Include="src\Graphics\Texture\Texture.cpp" />
@@ -68,6 +69,7 @@
     <ClInclude Include="inc\glen\Graphics\MaterialFactory.hpp" />
     <ClInclude Include="inc\glen\Graphics\MeshData.hpp" />
     <ClInclude Include="inc\glen\Graphics\MeshLoader.hpp" />
+    <ClInclude Include="inc\glen\Graphics\MeshRenderer.hpp" />
     <ClInclude Include="inc\glen\Graphics\Model.hpp" />
     <ClInclude Include="inc\glen\Graphics\RenderTexture.hpp" />
     <ClInclude Include="inc\glen\Graphics\Sprite.hpp" />
@@ -96,7 +98,6 @@
     <ClInclude Include="inc\glen\System\Vector2.hpp" />
     <ClInclude Include="inc\glen\System\Vector3.hpp" />
     <ClInclude Include="inc\glen\System\Vector4.hpp" />
-    <ClInclude Include="inc\glen\Window\MessageBox.hpp" />
     <ClInclude Include="inc\glen\Window\VideoMode.hpp" />
     <ClInclude Include="inc\glen\Window\Window.hpp" />
     <ClInclude Include="inc\glen\Window\WindowStyle.hpp" />
