--- a/glen/glen.vcxproj
+++ b/glen/glen.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Game\Camera.cpp" />
     <ClCompile Include="src\Game\Components\CameraComponent.cpp" />
     <ClCompile Include="src\Game\Skybox.cpp" />
     <ClCompile Include="src\Graphics\Image.cpp" />
@@ -25,7 +26,6 @@
     <ClCompile Include="src\Game\Components\Transform.cpp" />
     <ClCompile Include="src\Game\Entity.cpp" />
     <ClCompile Include="src\Game\World.cpp" />
-    <ClCompile Include="src\Graphics\Camera.cpp" />
     <ClCompile Include="src\Graphics\Color.cpp" />
     <ClCompile Include="src\Graphics\Light.cpp" />
     <ClCompile Include="src\Graphics\Material.cpp" />
@@ -50,11 +50,13 @@
     <ClCompile Include="src\System\Startup.cpp" />
     <ClCompile Include="src\System\Time.cpp" />
     <ClCompile Include="src\System\Transformable.cpp" />
+    <ClCompile Include="src\System\Utility.cpp" />
     <ClCompile Include="src\Window\VideoMode.cpp" />
     <ClCompile Include="src\Window\Window.cpp" />
     <ClCompile Include="thirdparty\GL\glew.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="inc\glen\Game\Camera.hpp" />
     <ClInclude Include="inc\glen\Game\Component.hpp" />
     <ClInclude Include="inc\glen\Game\Components\CameraComponent.hpp" />
     <ClInclude Include="inc\glen\Game\Components\Renderer.hpp" />
@@ -64,7 +66,6 @@
     <ClInclude Include="inc\glen\Game\Skybox.hpp" />
     <ClInclude Include="inc\glen\Game\World.hpp" />
     <ClInclude Include="inc\glen\glen.hpp" />
-    <ClInclude Include="inc\glen\Graphics\Camera.hpp" />
     <ClInclude Include="inc\glen\Graphics\Color.hpp" />
     <ClInclude Include="inc\glen\Graphics\Image.hpp" />
     <ClInclude Include="inc\glen\Graphics\Light.hpp" />
@@ -82,6 +83,7 @@
     <ClInclude Include="inc\glen\Graphics\Texture\TextureCubemap.hpp" />
     <ClInclude Include="inc\glen\System\mat4.hpp" />
     <ClInclude Include="inc\glen\System\Types.hpp" />
+    <ClInclude Include="inc\glen\System\Utility.hpp" />
     <ClInclude Include="inc\glen\System\vec2.hpp" />
     <ClInclude Include="inc\glen\System\vec3.hpp" />
     <ClInclude Include="inc\glen\System\vec4.hpp" />
