--- a/gameproject/gameproject.vcxproj.filters
+++ b/gameproject/gameproject.vcxproj.filters
@@ -21,7 +21,7 @@
     <ClCompile Include="game\Scenes\TestScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="game\Entities\Skyplane.cpp">
+    <ClCompile Include="game\Entities\Spacebox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -29,7 +29,7 @@
     <ClInclude Include="game\Scenes\TestScene.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="game\Entities\Skyplane.hpp">
+    <ClInclude Include="game\Entities\Spacebox.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
