--- a/gameproject/gameproject.vcxproj
+++ b/gameproject/gameproject.vcxproj
@@ -67,11 +67,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="game\Entities\Spacebox.cpp" />
+    <ClCompile Include="game\Entities\Spacecube.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="game\Scenes\TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="game\Entities\Spacebox.hpp" />
+    <ClInclude Include="game\Entities\Spacecube.hpp" />
     <ClInclude Include="game\Scenes\TestScene.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
